# face-recognition-server

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  face_recognition.db  railway.json  requirements.txt  test_server.py
Qt/: CMakeLists.txt  README_INTEGRATION.md  USAGE_GUIDE.md  build.sh  fix_qml_imports.sh  main.cpp  main.qml  qml.qrc
Qt/src/bridge/: qmlbridge.cpp  qmlbridge.h
Qt/src/database/: databasemanager.cpp  databasemanager.h
Qt/src/services/: cachemanager.cpp  cachemanager.h  cameramanager.cpp  cameramanager.h  facerecognitionservice.cpp  facerecognitionservice.h  networkmanager.cpp  networkmanager.h  systemmonitor.cpp  systemmonitor.h  usermanager.cpp  usermanager.h
Qt/ui/components/: HeaderBar.qml  Keyboard.qml
Qt/ui/dialogs/: DialogFailed.qml  DialogSuccess.qml  dialog_password_auth.qml
Qt/ui/pages/: History.qml  Login.qml  NetworkSettings.qml  Setting.qml  SettingAdmin.qml  SystemMonitor.qml
Qt/ui/pages_component/: CaptureFace.qml  EditUser.qml  UserInfor.qml
backups/: face-20250820T032221Z.dump
client/: __init__.py  main.py  requirements.txt
grafana/dashboards/: facelog.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
nginx/: app.conf  default.conf  ssl.conf
nginx/certs/: dev.crt  dev.key
prometheus/: prometheus.yml
scripts/: __init__.py  db_backup.sh  db_restore.sh  migrate_to_postgres.py  start_server.py  system_monitor.py  test_system.py
server/: Dockerfile  __init__.py  main.py  requirements-min.txt  requirements.txt
server/storage/: attendance_logs.jsonl  embeddings.json
server/web/: README.md  attendance.html  backups.html  index.html  users.html  workhours.html
server/web/css/: style.css
server/web/js/: app.js  attendance.js  backups.js  users.js  workhours.js
